test source Image

--- a/src/content/blog/parastase-si-pomeni.mdx
+++ b/src/content/blog/parastase-si-pomeni.mdx
@@ -35,7 +35,7 @@ Organizam intregul eveniment la o locatie propusa de noi sau una aleasa de dvs. 
 Livram mancare traditionala romaneasca in Pancesti, Sascut si imprejurimile judetului Bacau.
 ## Coliva
 
-<Image src={colivaImage} alt="Coliva" class="w-2/4 float-left mr-4" />
+<Image src={colivaImage.src} alt="Coliva" class="w-2/4 float-left mr-4" />
 
 Preparata din grau fiert si amestecat cu zahar sau miere, coliva se ofera ca pomana la parastase sau inmormantari. Este incarcata de simboluri si credinte. Mai poate contine nuci sfaramate fiind poate cea mai cunoscuta ofranda religioasa si care inainte de a fi data trebuie sfintita de preot.
 
@@ -43,7 +43,7 @@ Coliva se face din grau, acesta simbolizand insasi omul, caci graul reprezinta c
 
 ## Parastase si pomeni
 
-<Image src={parastaseImage} alt="Parastase si pomeni" class="w-1/3 float-right mr-4" />
+<Image src={parastaseImage.src} alt="Parastase si pomeni" class="w-1/3 float-right mr-4" />
 
 In drumul lui spre Imparatia lui Dumnezeu sufeltul omului trece prin numeroase incercari si prin diferite vami. Rudele raposatului incearca sa-i usurreze calea si de aceea se roaga pentru el, incercand totodata sa obtina pentru raposat o bunavointa mai mare din partea Creatorului Cerului si Pamantului.
 
