--- a/src/content/blog/incinerare.mdx
+++ b/src/content/blog/incinerare.mdx
@@ -19,7 +19,9 @@ tags:
 ---
 
 import Image from "../../components/Image.astro";
-
+import Urna1 from "../../../src/assets/gallery/urne/urna2.jpeg"
+import Urna2 from "../../../src/assets/gallery/urne/urna1.jpeg"
+Import Urna3 from "../../../src/assets/gallery/urne/urna3.jpeg"
 
 # Incinerare
 
@@ -32,7 +34,7 @@ Compania noastra ofera servicii funerare complete de incinerare umana.
 
 ## Etapele unui proces de incinerare constau in principal din urmatoarele:
 
-<Image src="../../../src/assets/gallery/urne/urna2.jpeg" alt="Urna exemplu" class="w-1/4 float-right mr-4" />
+<Image src={Urna1.src} alt="Urna exemplu" class="w-1/4 float-right mr-4" />
 
 
 
@@ -43,7 +45,7 @@ Compania noastra ofera servicii funerare complete de incinerare umana.
 - Doctor imbalsamare
 - Declararea decesului
 - Certificat de deces
-<Image src="../../../src/assets/gallery/urne/urna1.jpeg" alt="Urna exemplu" class="w-1/4 float-right mr-4" />
+<Image src={Urna2.src} alt="Urna exemplu" class="w-1/4 float-right mr-4" />
 
 - Adeverinta inhumare
 - Autorizatie Sanepid
@@ -59,7 +61,7 @@ Compania noastra ofera servicii funerare complete de incinerare umana.
 
 ## Caracteristicile serviciului de incinerare
 
-<Image src="../../../src/assets/gallery/urne/urna3.jpeg" alt="Urna exemplu" class="w-1/3 float-left mr-4" />
+<Image src={Urna3.src} alt="Urna exemplu" class="w-1/3 float-left mr-4" />
 
 
 Tehnic vorbind, incinerarea efectiva dureaza de la una pana la trei ore, in functie de diversi factori ce tin de compozitia chimica, volumul decedatului, materialul scicriului, temperatura…
