--- a/src/content/blog/repatriere.mdx
+++ b/src/content/blog/repatriere.mdx
@@ -19,6 +19,7 @@ tags:
 ---
 
 import Image from "../../components/Image.astro";
+import RepatriereDecedati from "../../../src/assets/gallery/urne/repatriere-decedati.jpg"
 
 
 Compania Funerara se ocupa de intocmirea si obtinerea documentatiei necesare pentru transportul (repatrierea) cetateanului roman decedat in strainatate. Trebuie stiut ca pentru obtinerea pasaportului mortuar, act esential in aducerea in Romania a corpului neinsufletit, taxele si conditiile specifice de eliberare a actelor difera de la stat la stat si de la o autoritate locala la alta.
@@ -28,7 +29,7 @@ Suntem in masura sa va informam ca apeland la serviciile noastre scapati de stre
 
 ## Informatii esentiale de retinut despre repatriere decedati
 
-<Image src="../../../src/assets/gallery/urne/repatriere-decedati.jpg" alt="Repatriere decedati" class="w-full float-left mr-4" />
+<Image src={RepatriereDecedati.src} alt="Repatriere decedati" class="w-full float-left mr-4" />
 
 
 Inainte de a se putea efectua transportul funerar, decesul va trebui inregistrat la autoritatile locale de la domiciliul sau locul de munca al defunctului. Desi legea nu prevede ca obligatoriu, decesul poate fi anuntat si inregistrat si la amabasada sau alte autoritati consulare. Este o etapa care sustine eliberarea unui certificat de deces romanesc ce permite repatrierea decedatului. Daca nu s-a procedat astfel, certificatul se va obtine dupa sosirea transportului in Romania.
