--- a/src/content/blog/transport-funerar.mdx
+++ b/src/content/blog/transport-funerar.mdx
@@ -19,12 +19,13 @@ tags:
 ---
 
 import Image from "../../components/Image.astro";
+import TransportFunerar from "../../../src/assets/astro/transport.jpg"
 
 
 Stim cat este de important pentru fiecare sa isi aduca persoana draga cat mai aproape si dupa ce aceasta dispare dintre noi, motiv pentru care de peste 5 ani asiguram transport funerar conducand sufletele care pleaca din lumea celor vii in drumul spre viata vesnica, fiind alaturi de familii cu sprijin moral si material.
 
 Toate sarcinile noastre sunt indeplinite complet cu demnitate, profesionalism si promptitudine, cu devotament si maxim de atentie acordate la toate detaliile.
-<Image src="../../../src/assets/astro/transport.jpg" alt="Transport Funerar" class="w-full float-left mr-4" />
+<Image src={TransportFunerar.src} alt="Transport Funerar" class="w-full float-left mr-4" />
 
 Compania noastra de servicii funerare asigura servicii complete printre care se numara si atat transportul funerar intern cat si cel international, dar si servicii de repatriere in strainatate si in Romania.
 
