--- a/src/content/blog/imbalsamare-si-cosmetizare.mdx
+++ b/src/content/blog/imbalsamare-si-cosmetizare.mdx
@@ -18,6 +18,10 @@ tags:
   - Cosmetizare
 ---
 import Image from "../../components/Image.astro";
+import ImbalsamareAntichitate from "../../../src/assets/gallery/imbalsamare/imbalsamare-antichitate.jpg"
+import EchipamentFunerar from "../../../src/assets/gallery/imbalsamare/echipament-imbalsamare-specific-ritualului-funerar.jpg"
+import ToaletareaDecedat from "../../../src/assets/gallery/imbalsamare/toaletare-decedat.png"
+
 
 
 # Îmbalsamarea și Cosmetizarea Decedatului
@@ -37,7 +41,7 @@ Pentru buna desfășurare a înmormântării, recomandăm să alegeți serviciul
 
 ## Ce înseamnă îmbalsamarea?
 
-<Image src="../../../src/assets/gallery/imbalsamare/imbalsamare-antichitate.jpg" alt="Imbalsamare Antichitate" class="w-1/3 float-left mr-4" />
+<Image src={ImbalsamareAntichitate.src } alt="Imbalsamare Antichitate" class="w-1/3 float-left mr-4" />
 
 Îmbalsamarea reprezintă conservarea chimică a corpului unei persoane decedate, printr-o metodă artificială ce presupune injectarea de substanțe fluide care împiedică descompunerea naturală. Scopul îmbalsamării este de a păstra trupul decedat într-o stare cât mai naturală, pentru a putea fi văzut de familie și apropiați înainte de înmormântare.
 
@@ -47,8 +51,7 @@ Această procedură se efectuează într-un loc special amenajat și autorizat, 
 
 În camera de îmbalsamare, care este dotată cu echipamente moderne și conforme cu normele legale, se asigură un proces igienic și eficient de pregătire a decedatului. Condițiile de igienă trebuie să fie la cele mai înalte standarde pentru a respecta legislația în vigoare.
 
-<Image src="../../../src/assets/gallery/imbalsamare/echipament-imbalsamare-specific-ritualului-funerar.jpg" alt="Echipament imbalsamare specific ritualului funerar" class="w-1/2 float-right mr-4" />
-
+<Image src={EchipamentFunerar.src} alt="Echipament imbalsamare specific ritualului funerar" class="w-1/2 float-right mr-4" />
 
 Această cameră include:
 
@@ -60,7 +63,7 @@ Trupul persoanei decedate este spălat cu apă curată, simbolizând botezul, ia
 
 ## Cosmetizarea decedatului
 
-<Image src="../../../src/assets/gallery/imbalsamare/toaletare-decedat.png" alt="Toaletarea decedatului" class="w-1/3 float-left mr-4" />
+<Image src={ToaletareaDecedat.src} alt="Toaletarea decedatului" class="w-1/3 float-left mr-4" />
 
 Cosmetizarea este o procedură complementară îmbalsamării, prin care trupul decedatului este pregătit pentru a fi prezentat celor dragi într-o stare cât mai naturală și respectuoasă. Aceasta poate include machiajul, aranjarea părului și alte proceduri estetice necesare.
 
