--- a/src/content/blog/incinerare.mdx
+++ b/src/content/blog/incinerare.mdx
@@ -21,7 +21,7 @@ tags:
 import Image from "../../components/Image.astro";
 import Urna1 from "../../../src/assets/gallery/urne/urna2.jpeg"
 import Urna2 from "../../../src/assets/gallery/urne/urna1.jpeg"
-Import Urna3 from "../../../src/assets/gallery/urne/urna3.jpeg"
+import Urna3 from "../../../src/assets/gallery/urne/urna3.jpeg"
 
 # Incinerare
 
